# display-source-switcher

./: .gitignore  README.md  ScreenSwitchWidget-win.spec  ScreenSwitchWidget.spec  installer.iss  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: build.yml
src/: __main__.py  app.py  config.py  icons.py  mock_backend.py  monitor_manager.py  popup.py  updater.py  version.py  workers.py
tests/: conftest.py  test_config.py  test_mock_backend.py  test_monitor_manager.py  test_updater.py
