[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ScreenSwitchWidget"
version = "0.1.0"
description = "System tray widget for switching monitor input sources via DDC/CI"
requires-python = ">=3.11"
dependencies = [
    "monitorcontrol>=4.0.0",
    "PySide6>=6.4.0",
]

[project.scripts]
screen-switch = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
